<resources>
    <string name="app_name">Assignment1</string>
    <string name="calc">Calculate Profit/Loss</string>
    <string name="buy">Buy Price</string>
    <string name="sell">Sell Price</string>
    <string name="buy_comm">Buy Commission %</string>
    <string name="sell_comm">Sell Commission %</string>
    <string name="num_shares">No. Of Shares</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="clear">C</string>
    </resources>